[package]
name = "auth0-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.79"
derive_builder = "0.20.0"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
serde_with = "3.6.1"
time = { version = "0.3.34", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]
wiremock = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
claym = "0.5.1"
fake = "2.9.2"
http = "1.0.0"
